test/resources/parser/failing/BadMatch.scala
object BadMatch
    (x match { ... } + 1)
end BadMatch